--- a/mahima-godot/.godot/editor/editor_layout.cfg
+++ b/mahima-godot/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://level.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
+open_scenes=PackedStringArray("res://level.tscn", "res://controller.tscn")
+current_scene="res://controller.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Icon.cs"]
-selected_script="res://Icon.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
