--- a/mahima-godot/.godot/editor/project_metadata.cfg
+++ b/mahima-godot/.godot/editor/project_metadata.cfg
@@ -16,3 +16,12 @@ scripts=["res://Icon.cs"]
 [script_setup]
 
 last_selected_language="C#"
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(1, 1, 0.85098, 1, 1, 1, 0.74902, 1, 1, 1, 0.713726, 1, 1, 1, 0.623529, 1, 1, 1, 0.541176, 1)
+
+[project_settings]
+
+advanced_mode=true
