--- a/mahima-godot/.godot/editor/editor_layout.cfg
+++ b/mahima-godot/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://level.tscn", "res://controller.tscn")
-current_scene="res://controller.tscn"
+current_scene="res://level.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
