--- a/mahima-godot/.godot/editor/project_metadata.cfg
+++ b/mahima-godot/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
 executable_path="D:/Godot/Godot_v4.3-stable_mono_win64.exe"
+show_all_nodes_for_node_selection=true
 
 [dialog_bounds]
 
