Create Debug Panel:FPS

--- a/mahima-godot/.godot/editor/project_metadata.cfg
+++ b/mahima-godot/.godot/editor/project_metadata.cfg
@@ -21,7 +21,7 @@ last_selected_language="C#"
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(1, 1, 0.85098, 1, 1, 1, 0.74902, 1, 1, 1, 0.713726, 1, 1, 1, 0.623529, 1, 1, 1, 0.541176, 1)
+recent_presets=PackedColorArray(1, 1, 0.541176, 1, 0.302902, 0.616068, 0.935708, 1, 0, 0, 0, 1, 0.366595, 0.366595, 0.366595, 1, 0.501407, 0.501406, 0.501406, 1, 0.464235, 0.464235, 0.464235, 1, 0.689285, 0.689285, 0.689285, 1, 0.585062, 0.585062, 0.585062, 1, 0.531051, 0.531051, 0.531051, 1)
 
 [project_settings]
 
