--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@
 # Python specific ignores
 __pycache__/
 .venv/
+**/.venv/
+
+# Ignore PyInstaller build artifacts
+/mahima-godot/mahima-opencv/build/
+/mahima-godot/mahima-opencv/dist/
+
+# Ignore PyInstaller executables
+**/hand_detection.exe
+
+# Ignore executables
+*.exe
