--- a/mahima-godot/export_presets.cfg
+++ b/mahima-godot/export_presets.cfg
@@ -7,9 +7,9 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.exe,res://mahima-opencv/hand_detection.exe, res://mahima-opencv/*, res://mahima-opencv/**"
 exclude_filter=""
-export_path=""
+export_path="C:/Users/hp/Desktop/godot/game.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
